<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/padding_m"
    android:layout_marginRight="@dimen/padding_m"
    android:layout_marginTop="@dimen/padding_m"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="4dp">

    <org.weread.widget.SquaredFrameLayout
        android:id="@+id/vImageRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/art_item_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/profile_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="@dimen/padding_m"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/art_item_tit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art_tit_test"
                android:textColor="@color/gray600"
                android:textSize="@dimen/m_textsiz" />

            <TextView
                android:id="@+id/art_item_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art_date_test"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/s_textsiz" />

            <TextView
                android:id="@+id/art_item_sumary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="2"
                android:text="@string/art_sumary_test"
                android:textColor="@color/gray300"
                android:textSize="@dimen/s_textsiz" />
        </LinearLayout>
    </org.weread.widget.SquaredFrameLayout>
</android.support.v7.widget.CardView>
