<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/profile_bg" />

            <View
                android:id="@+id/drawer_item_divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shawdow_totop" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xxh"
            android:orientation="vertical"
            android:paddingLeft="64dp"
            android:paddingRight="64dp">

            <EditText
                android:id="@+id/login_username_edittv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="@dimen/h_textsiz"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/login_passwd_edittv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/h_textsiz" />

            <Button
                android:id="@+id/login_confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/padding_xh"
                android:background="@drawable/login_btn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/m_textsiz" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>